feet: transcription; fix: card text align

--- a/src/sass/components/mainGame/_cardGame.scss
+++ b/src/sass/components/mainGame/_cardGame.scss
@@ -17,6 +17,12 @@
 }
 
 .card-text{
+  text-align: center;
+  transition: all ease 3s;
+  -webkit-transition: all ease 3s;
+  -moz-transition: all ease 3s;
+  -ms-transition: all ease 3s;
+  -o-transition: all ease 3s;
   &--quest{
     padding: 70px 0px 10px;
   }
